the terms of the GNU Free Documentation License, Version 1.3 or any later
version published by the Free Software Foundation; with no Invariant Sections,
no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
in the sources of this package and additionally can be obtained from Internet
<https://www.gnu.org/licenses>.

* [2018-02-11] RFC4880: added ReleasePacketContext() and ParsePublicKeyBlock()
* [2018-02-11] RFC4880: unified name space of some types (e.g. tmcg_byte_t)
* [2018-02-10] added function mpz_lprime_prefix() for k-prefix tweak
* [2018-02-10] improved strength of oracle hash function g() by second algo
* [2018-02-10] raised the requirement of libgcrypt version to >= 1.7.0
* [2018-02-09] mpz_shash: bugfix changes the output of hash function g()
* [2018-02-08] release 1.3.11 of LibTMCG
* [2018-01-26] init_libTMCG(): added libgcrypt self-test
* [2018-01-26] init_libTMCG(): check for already initialized libgcrypt
* [2018-01-23] RFC4880: introduced new enumeration type tmcg_armor_t
* [2018-01-22] RFC4880: added hash truncation for AsymmetricSignDSA()
* [2018-01-21] RFC4880: added KeyRevocationHashV3()
* [2018-01-16] RFC4880: increased buffer length for very large key sizes
* [2018-01-16] RFC4880: added OctetsCompareConstantTime()
* [2018-01-14] release 1.3.10 of LibTMCG
* [2018-01-12] RFC4880: added PacketSigPrepareCertificationSignature()
* [2018-01-10] RFC4880: added RSA encoding for PacketPubEncode()
* [2018-01-09] RFC4880: added AsymmetricSignRSA() and AsymmetricVerifyRSA()
* [2017-12-23] release 1.3.9 of LibTMCG
* [2017-12-19] RFC4880: fixes bad interpretation of subpacket length encoding
* [2017-12-17] RFC4880: fixes missing hash truncation in AsymmetricVerifyDSA()
* [2017-12-08] release 1.3.8 of LibTMCG
* [2017-12-06] RFC4880: improved error handling for unsupported public-key algos
* [2017-12-05] RFC4880: increased S2K count to 0xAC (i.e. 1835008 iterations)